# IWallpaperChanger

./: CMakeLists.txt  IWallpaperChanger.code-workspace  README.md
installscripts/gnome/: install.sh
installscripts/kde/: install.sh
installscripts/xfce/: install.sh
source/: gnomeosmanager.cpp  gnomeosmanager.hpp  kdeosmanager.cpp  kdeosmanager.hpp  macmain.cpp  macosmanager.cpp  macosmanager.hpp  main.cpp  main.hpp  maingnome.cpp  mainkde.cpp  mainwin.cpp  mainxfce.cpp  osmanager.hpp  osmanagerfactory.cpp  osmanagerfactory.hpp  winosmanager.cpp  winosmanager.hpp  xfceosmanager.cpp  xfceosmanager.hpp
